Kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
   - name: nginx1
     image: nginx:1.14.2
     ports:
     - containerPort: 80
   - name: nginx2
     image: nginx:1.14.2
     ports:
     - containerPort: 80
