Kubernetes/clusterIP.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ip-app
  template:
    metadata:
      labels:
        app: ip-app
    spec:
      containers:
      - name: ip-app
        image: harshajain/ip-app:1
        ports:
        - containerPort: 80

---

apiVersion: v1 
kind: Service 
metadata:
    name: my-clusterip-ip-app
spec: 
    type: ClusterIP
    selector: 
        app: ip-app   
    ports:
       - name: http 
         port: 30002
         targetPort: 80
