Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
    - host: nginx.example.com
      http: 
         paths:
         - pathType: Prefix
           path: "/"
           backend: 
              service:
                 name: my-clusterip
                 port: 
                    number: 30002
         - pathType: Prefix
           path: "/name"
           backend:
              service:
                 name: my-clusterip1
                 port:
                    number: 30004
